--- a/strings/CMakeLists.txt
+++ b/strings/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(strings main.cpp)
+add_executable(4_lengthOfLongestSubstring "4_lengthOfLongestSubstring.cpp" )
+add_executable(633_judgeSquareSum "633_judgeSquareSum.cpp" )
